# pdf2md-pro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  archivio_versioni.xlsx  avvia-gui.command  ferma-servizio.command  installa-servizio.command  pyproject.toml
.github/workflows/: ci.yml
docs/report/: REPORT_2026-07-17.md
docs/superpowers/plans/: 2026-07-17-fase0-1.md
docs/superpowers/specs/: 2026-07-17-pdf2md-pro-design.md
eval/: make_corpus.py  run_eval.py
eval/corpus/: images.expected.txt  simple.expected.txt  tables.expected.txt  twocol.expected.txt
src/pdf2md_pro/: __init__.py  cli.py
src/pdf2md_pro/core/: auditor.py  batch.py  brain.py  classifier.py  naming.py  pipeline.py  provenance.py  reporting.py  splitter.py
src/pdf2md_pro/engines/: base.py  native.py  openrouter.py
src/pdf2md_pro/gui/: server.py
src/pdf2md_pro/gui/static/: app.js  index.html  style.css
src/pdf2md_pro/output/: writer.py
tests/: test_batch.py  test_brain.py  test_cli.py  test_gui_server.py  test_naming.py  test_ocr.py  test_openrouter.py  test_pipeline.py  test_splitter.py
