[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md-pro"
version = "0.1.0"
description = "PDF to Markdown converter with per-page hybrid routing and provenance"
requires-python = ">=3.11"
dependencies = ["pymupdf4llm>=0.0.17"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pdf2md = "pdf2md_pro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf2md_pro = ["gui/static/*"]
